src/components/Tooltip/Tooltip.module.css
.tooltip {
  position: fixed;
  font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
  font-size: var(--text-sm);
  line-height: 1.2;
  padding: 10px;
  border-radius: 6px;
  user-select: none;

  z-index: 9999;
  background-color: #242527;
  color: var(--text-light);
  min-width: 10px;
  max-width: 200px;

  box-shadow:
    rgba(0, 0, 0, 0.1) 0px 0px 5px 0px,
    rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
}

